--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -1,4 +1,4 @@
-<hr>
+<!-- <hr>
 <div class="post_navi">
   {%- if page.previous.url -%}
   <a class="post_navi-item nav_prev" href="{{ page.previous.url }}" title="{{ page.previous.title }}">
@@ -18,4 +18,4 @@
     <div class="post_navi-arrow">&gt;</div><div class="post_navi-label">Blog Archive</div><div><span>Archive of all previous blog posts</span></div>
   </a>
   {%- endif -%}
-</div>
+</div> -->
