--- a/js/highlightjs/styles/ssms.css
+++ b/js/highlightjs/styles/ssms.css
@@ -1,4 +1,4 @@
-.hljs.language-tsql {
+/* .hljs.language-tsql {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
@@ -48,4 +48,4 @@
 
 .language-tsql .hljs-literal {
     color: #808080;
-}
+} */
